--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -1,40 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_above="@+id/sendBut"
-    tools:context="com.example.pollyplyim.androidfinalproject.QuizListActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity" >
 
-    <ListView
-        android:id="@+id/questionList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/addBut"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
-
-    <EditText
-        android:id="@+id/newQuestion"
+    <FrameLayout
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/addBut"
-        android:layout_alignBottom="@+id/addBut"
-        android:layout_toStartOf="@+id/addBut"
-        android:ems="1"
-        android:hint="@string/NewQuestion"
-        android:inputType="text"
-        android:singleLine="true" />
-
-    <Button
-        android:id="@+id/addBut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="addQuestion"
-        android:text="@string/addQuestion" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
