--- a/app/src/main/res/drawable/button_color.xml
+++ b/app/src/main/res/drawable/button_color.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#003000"
-        android:centerColor="#006000"
-        android:endColor="#003000"
+        android:startColor="#a52a2a"
+        android:centerColor="#ffa07a"
+        android:endColor="#a52a2a"
         android:angle="270" />
     <corners android:radius="5dp" />
-    <stroke android:width="2px" android:color="#007000" />
+    <stroke android:width="2px" android:color="#b8860b" />
 </shape>
