--- a/app/src/main/res/layout/start_page.xml
+++ b/app/src/main/res/layout/start_page.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/yellow"
+    android:background="@color/home_background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -19,8 +19,7 @@
 
     <Button
         android:id="@+id/student_list_button"
-        android:background="@drawable/button_green"
-        android:textColor="@color/ivory"
+        android:background="@drawable/button_color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -31,8 +30,7 @@
 
     <Button
         android:id="@+id/summary_button"
-        android:background="@drawable/button_green"
-        android:textColor="@color/ivory"
+        android:background="@drawable/button_color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -41,8 +39,7 @@
 
     <Button
         android:id="@+id/info_button"
-        android:background="@drawable/button_green"
-        android:textColor="@color/ivory"
+        android:background="@drawable/button_color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
